--- a/templates/add_movie.html
+++ b/templates/add_movie.html
@@ -7,8 +7,7 @@
 <body>
     <nav>
         <ul>
-            <li><a href="{{ url_for('index') }}">Home</a></li>
-
+            <li><a href="{{ url_for('add_movie') }}">Add Movie</a></li>
         </ul>
     </nav>
     <h1>Add Movie</h1>
@@ -16,13 +15,13 @@
         <label for="title">Title:</label>
         <input type="text" id="title" name="title" required><br>
         <label for="rating">Rating:</label>
-        <input type="number" id="rating" name="rating" step="0.1" required><br>
+        <input type="number" id="rating" name="rating" required><br>
         <label for="year">Year:</label>
         <input type="number" id="year" name="year" required><br>
         <label for="genre">Genre:</label>
         <input type="text" id="genre" name="genre" required><br>
         <button type="submit">Add Movie</button>
     </form>
-
+    <a href="{{ url_for('index') }}">Back to Movie List</a>
 </body>
 </html>
